# modmaid

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  ModMaid.sln  README.md
debug/: CMakeLists.txt  app.cc  mod.cc
docs/: CMakeLists.txt  Doxyfile.in  docs.cmake
examples/generic/: CMakeLists.txt  mod.cc
examples/hello-world/: CMakeLists.txt  mod.cc
modmaid/: CMakeLists.txt
modmaid/include/: modmaid.hh
modmaid/include/maid/: hooks.hh  init.hh  logging.hh  memory.hh
modmaid/src/: entrypoint.cc  init.cc
modmaid/src/hooks/: hooks.cc  hooks.windows.cc
modmaid/src/logging/: logging.cc  logging.windows.cc
modmaid/src/memory/: memory.windows.cc
modmaid/src/unload/: unload.windows.cc
modules/core/: CMakeLists.txt
modules/core/include/modmaid/: core.hh
modules/core/include/modmaid/core/: entrypoint.hh  extern_macros.hh  hooks.hh  init.hh  logging.hh  memory.hh  signatures.hh
modules/core/src/: entrypoint.cc  init.cc  signatures.cc
modules/core/src/hooks/: hooks.cc  hooks.windows.cc
modules/core/src/logging/: logging.cc  logging.windows.cc
modules/core/src/memory/: memory.cc  memory.unix.cc  memory.windows.cc
modules/core/src/unload/: unload.windows.cc
modules/core/tests/: accessors.cc  signatures.cc
modules/gui/: CMakeLists.txt
modules/gui/include/modmaid/: gui.hh
modules/gui/include/modmaid/gui/: init.hh
modules/gui/src/: init.cc
modules/gui/src/directx11/: init.cc
modules/gui/src/dxcommon/: dxcommon.cc  dxcommon.hh
modules/gui/src/win32/: init.cc
scripts/cmake/: ModMaidUtils.cmake
tools/ModMaid.DoxyParser/: Generator.cs  GeneratorConfiguration.cs  ModMaid.DoxyParser.csproj  Program.cs  TypeMapper.cs
tools/ModMaid.DoxyParser/Models/Xml/: DoxyBool.cs  DoxyCompound.cs  DoxyCompoundDefinition.cs  DoxyIndex.cs  DoxyInnerClass.cs  DoxyLocation.cs  DoxyMemberDefinition.cs  DoxyMemberKind.cs  DoxyProtectionLevel.cs  DoxyRoot.cs  DoxySectionDefinition.cs  DoxyType.cs
tools/ModMaid.DoxyParser/Models/Yaml/: YamlNamespace.cs
website/: package-lock.json
website/pages/docs/: toc.vue
website/pages/docs/namespaces/: [slug].vue
